Made endpoints more consistent
